--- a/usePopcorn/src/assets/index.css
+++ b/usePopcorn/src/assets/index.css
@@ -190,16 +190,12 @@ body {
 }
 
 .btn-delete {
-  position: absolute;
-  right: 2.4rem;
-
-  height: 1.8rem;
-  aspect-ratio: 1;
-  border-radius: 50%;
+  background-color: rgb(180, 69, 69);
+  color: var(--color-text);
   border: none;
-  background-color: var(--color-red);
-  color: var(--color-background-900);
-  font-size: 0.9rem;
+  border-radius: 10rem;
+  font-size: 1.4rem;
+  padding: 1rem;
   font-weight: bold;
   cursor: pointer;
   transition: all 0.3s;
@@ -207,6 +203,22 @@ body {
 
 .btn-delete:hover {
   background-color: var(--color-red-dark);
+}
+
+.btn-add {
+  background-color: var(--color-primary);
+  color: var(--color-text);
+  border: none;
+  border-radius: 10rem;
+  font-size: 1.4rem;
+  padding: 1rem;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+.btn-add:hover {
+  background-color: var(--color-primary-light);
 }
 
 /* ******* */
@@ -290,22 +302,6 @@ body {
   display: flex;
   flex-direction: column;
   gap: 2.4rem;
-}
-
-.btn-add {
-  background-color: var(--color-primary);
-  color: var(--color-text);
-  border: none;
-  border-radius: 10rem;
-  font-size: 1.4rem;
-  padding: 1rem;
-  font-weight: bold;
-  cursor: pointer;
-  transition: all 0.3s;
-}
-
-.btn-add:hover {
-  background-color: var(--color-primary-light);
 }
 
 .seconds {
