--- a/quiz/src/assets/index.css
+++ b/quiz/src/assets/index.css
@@ -176,9 +176,9 @@ progress {
 .result {
   background-color: var(--color-theme);
   color: var(--color-light);
-  border-radius: 100px;
+  border-radius: 50px;
   text-align: center;
-  padding: 2rem 0;
+  padding: 20px;
   font-size: 2rem;
   font-weight: 500;
   margin-bottom: 1.6rem;
